Stopped hiding the logo on mobile sizes

--- a/app/styles/style.styl
+++ b/app/styles/style.styl
@@ -84,8 +84,7 @@ body
              width 333ms ease-in,
              top 333ms ease-in,
              left 333ms ease-in,
-             color 333ms ease-in,
-             opacity 333ms ease-in
+             color 333ms ease-in
 
 #header
   padding-top 0.64em
@@ -295,9 +294,6 @@ i:hover, li.external:hover
   body.promo
     #stage
         opacity 1
-
-  #stage
-    opacity 0
 
 @media (max-width: 720px)
   body.promo
